# VegaFlux

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
apps/aegis_decode_cli/: main.cpp
apps/aegis_replay_cli/: main.cpp
apps/vegaflux_run/: main.cpp
apps/vf_build_dataset_cli/: main.cpp
apps/vf_report/: .gitkeep
apps/vf_run_execution_cli/: main.cpp
apps/vf_run_options_cli/: main.cpp
apps/vf_run_policy_cli/: main.cpp
architecture/decisions/: 0001-manifest-component-field.md
artifacts/decoder/: benchmark_summary.json  malformed.normalized.jsonl  malformed.quarantine.jsonl  run_manifest.json  test_summary.json
artifacts/decoder-validation/: benchmark_summary.json  decoded.normalized.jsonl  extended.normalized.jsonl  fuzz_lite.normalized.jsonl  fuzz_lite.quarantine.jsonl  gap.normalized.jsonl  run_manifest.json  test_summary.json
artifacts/execution/: benchmark_summary.json  fills.jsonl  run_manifest.json  simulation_metadata.json  test_summary.json
artifacts/execution-sensitivity/: benchmark_summary.json  calibration_status.csv  deterministic_fills.jsonl  fills.jsonl  run_manifest.json  scenario_sweep.csv  scenario_sweep.json  simulation_metadata.json  test_summary.json
artifacts/features/: benchmark_summary.json  dataset_metadata.json  features.jsonl  run_manifest.json  test_summary.json
artifacts/features-validation/: benchmark_summary.json  dataset_metadata.json  features.jsonl  run_manifest.json  source.normalized.jsonl  test_summary.json
artifacts/foundation/: benchmark_summary.json  run_manifest.json  test_summary.json
artifacts/options/: benchmark_summary.json  filtered_quotes.jsonl  run_manifest.json  surface_diagnostics.json  test_summary.json
artifacts/policy/: benchmark_summary.json  pnl_attribution.json  quote_decisions.jsonl  run_manifest.json  test_summary.json
artifacts/policy-validation/: ablation_source.json  ablation_table.csv  benchmark_summary.json  pnl_attribution.json  quote_decisions.jsonl  risk_gate_events.jsonl  run_manifest.json  test_summary.json
artifacts/quality/: benchmark_summary.json  run_manifest.json  test_summary.json
artifacts/replay/: benchmark_summary.json  replay_checkpoint.txt  replay_checksum.json  replay_demo_snapshot.json  run_manifest.json  test_summary.json
artifacts/replay-validation/: anomalies.jsonl  benchmark_summary.json  crossed_book.normalized.jsonl  crossed_checksum.json  crossed_snapshot.json  extended_audit.jsonl  replay_checkpoint.txt  replay_checksum.json  replay_demo_snapshot.json  run_manifest.json  test_summary.json
artifacts/report/: bootstrap_intervals.csv  free_data_manifest.json  negative_results.csv  public_iex_quote_spreads.csv  public_iex_quote_stats.csv  public_iex_summary.json  public_iex_tops_events_sample.csv  repro_commands.md  stats_summary.json
artifacts/report/figures/: benchmark_smoke_table.csv  claim_evidence.csv  data_lineage.csv  figures_manifest.json  pnl_attribution_components.csv  policy_ablation.csv  public_iex_markout_proxy_sample.csv  public_iex_mean_spread_chart.csv  public_iex_quote_spreads_sample.csv  queue_sensitivity.csv  surface_diagnostics.csv  surface_quote_filter_counts.csv  test_coverage.csv
artifacts/surface-validation/: benchmark_summary.json  filtered_quotes.jsonl  greek_fd_errors.csv  iv_residuals.csv  run_manifest.json  source_table.csv  static_arbitrage.csv  surface_diagnostics.json  test_summary.json
benchmarks/: decoder_benchmark.cpp  execution_benchmark.cpp  feature_benchmark.cpp  options_benchmark.cpp  policy_benchmark.cpp  replay_benchmark.cpp  smoke.md
cmake/: run_cpp_smoke.cmake
configs/benchmark/: decoder_smoke.json  execution_smoke.json  features_smoke.json  features_validation_smoke.json  foundation_smoke.json  options_smoke.json  policy_smoke.json  policy_validation_smoke.json  replay_smoke.json  surface_validation_smoke.json
configs/experiments/: decoder_smoke.json  execution_sensitivity_smoke.json  execution_smoke.json  features_smoke.json  features_validation_smoke.json  manifest_smoke.json  options_smoke.json  policy_smoke.json  policy_validation_smoke.json  replay_smoke.json  surface_validation_smoke.json
data_contracts/fixtures/: synthetic_market_events.jsonl  synthetic_options.csv  synthetic_options_surface.csv  synthetic_policy.jsonl
data_contracts/manifests/: data_sources.json  decoder_fixture_manifest.json  execution_manifest.json  features_dataset_manifest.json  fixture_manifest.json  options_manifest.json  policy_manifest.json  policy_validation_manifest.json  public_data_sources.json
data_contracts/schemas/: canonical_market.policy_negative.proto  canonical_market.reused_field_negative.proto
libs/aegis_decode/include/aegis_decode/: synthetic_itch.hpp
libs/aegis_decode/src/: synthetic_itch.cpp
libs/aegis_events/include/aegis_events/: canonical_jsonl.hpp  version.hpp
libs/aegis_events/src/: canonical_jsonl.cpp
libs/aegis_lob/include/aegis_lob/: book.hpp
libs/aegis_lob/src/: book.cpp
libs/aegis_replay/include/aegis_replay/: replay.hpp
libs/aegis_replay/src/: replay.cpp
libs/aegis_transport/include/aegis_transport/: synthetic.hpp
libs/aegis_transport/src/: synthetic.cpp
libs/vf_execution/include/vf_execution/: execution.hpp
libs/vf_execution/src/: execution.cpp
libs/vf_experiments/: .gitkeep
libs/vf_features/include/vf_features/: features.hpp
libs/vf_features/src/: features.cpp
libs/vf_options/include/vf_options/: options.hpp
libs/vf_options/src/: options.cpp
libs/vf_policy/include/vf_policy/: policy.hpp
libs/vf_policy/src/: policy.cpp
proto/: canonical_market.proto
python/notebooks/: .gitkeep
python/scripts/: clean_build_test.py  generate_report.py
python/vegaflux_py/: __init__.py  benchmark_smoke.py  fixtures.py  manifest.py  repo_checks.py  schema_compat.py  schema_contracts.py  smoke.py  test_summary.py
tests/unit/: contracts_smoke.cpp  decoder_tests.cpp  execution_tests.cpp  feature_tests.cpp  options_tests.cpp  policy_tests.cpp  replay_tests.cpp
vegaflux_py/: __init__.py
