[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vegaflux-py"
version = "0.1.0"
description = "Reproducible market-data research tooling for VegaFlux"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
